# online_course

./: .flake8  .gitignore  README.md  db.sqlite3  manifest.yml  pyproject.toml
core/: models.py
myproject/: settings.py  urls.py
onlinecourse/: admin.py  models.py  urls.py  views.py
onlinecourse/migrations/: 0001_initial.py  0002_question.py  0003_auto_20220504_1303.py  0004_submission.py
onlinecourse/templates/onlinecourse/: course_detail_bootstrap.html  course_list_bootstrap.html  exam_result_bootstrap.html  user_login_bootstrap.html  user_registration_bootstrap.html
onlinecourse/templates/onlinecourse/includes/: base.html  nav.html
