[tool.poetry]
name = "ario"
version = "0.1.0"
description = ""
authors = ["ario <cybera.3s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
pillow = "^9.5.0"
django = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
