[tool.poetry]
name = "ario"
version = "0.1.0"
description = ""
authors = ["ario <cybera.3s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
pillow = "^9.5.0"
django = "5.1"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79